変数名変更

--- a/ts/index.html
+++ b/ts/index.html
@@ -30,17 +30,17 @@
                 <input type="radio" id="radioUndirected" value="undirected" name="direction">undirected
                 <input type="radio" id="radioDirected" value="directed" name="direction">directed
             </p>
-            <p>vertex radius : <input id="vertexRadiusInput" type="number"></p>
-            <p>edge length : <input id="edgeLengthInput" type="number"></p>
+            <p>vertex radius : <input type="number" id="inputVertexRadius"></p>
+            <p>edge length : <input type="number" id="inputEdgeLength"></p>
             <p>gravity : <input type="checkbox" id="checkboxGravity"></p>
         </fieldset>
         <fieldset>
             <legend>Adjacency List</legend>
-            <textarea id="adjacencylist" cols="10" rows="10"></textarea>
+            <textarea id="inputAdjList" cols="10" rows="10"></textarea>
         </fieldset>
         <fieldset>
             <legend>Adjacency Matrix</legend>
-            <textarea id="adjacencymat" cols="10" rows="10"></textarea>
+            <textarea id="inputAdjMat" cols="10" rows="10"></textarea>
         </fieldset>
     </div>
     <hr>
