--- a/ts/index.html
+++ b/ts/index.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Graph visualization test</title>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w"
+        crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-        html,body { height:100%; }
-        fieldset {
-            vertical-align: top;
-            display: inline-block;
+        html,body {
+            height:100%;
+            padding: 10px;
         }
         #controller {
             height: 320px;
@@ -21,40 +22,71 @@
             border: 1px;
             border-style: dashed;
             position: center;
+            background-color: rgb(250, 250, 250);
         }
-        #wrapper {
+        center {
             height: 100%;
             width: 100%;
+        }
+        #wrapper {
+            height: 80%;
+            width: 80%;
             padding: 0px;
         }
     </style>
 </head>
 
 <body>
-    <div id="controller">
-        <fieldset>
-            <legend>Settings</legend>
-            <p>
-                <input type="radio" id="radioZeroIndexed" name="indexing">0-indexed
-                <input type="radio" id="radioOneIndexed" name="indexing">1-indexed
-            </p>
-            <p>
-                <input type="radio" id="radioUndirected" value="undirected" name="direction">undirected
-                <input type="radio" id="radioDirected" value="directed" name="direction">directed
-            </p>
-            <p>vertex radius : <input type="number" id="inputVertexRadius"></p>
-            <p>edge length : <input type="number" id="inputEdgeLength"></p>
-            <p>gravity : <input type="checkbox" id="checkboxGravity"></p>
-        </fieldset>
-        <fieldset>
-            <legend>Adjacency List</legend>
-            <textarea id="inputAdjList" cols="10" rows="10"></textarea>
-        </fieldset>
+    <div id="controller" class="pure-g">
+        <div class="pure-u-1-3">
+            <form class="pure-form">
+                <fieldset>
+                    <legend>Settings</legend>
+                    <p>
+                        <input type="radio" id="radioZeroIndexed" name="indexing">0-indexed
+                        <input type="radio" id="radioOneIndexed" name="indexing">1-indexed
+                    </p>
+                    <p>
+                        <input type="radio" id="radioUndirected" value="undirected" name="direction">undirected
+                        <input type="radio" id="radioDirected" value="directed" name="direction">directed
+                    </p>
+                    <p>vertex radius : <input type="number" id="inputVertexRadius"></p>
+                    <p>edge length : <input type="number" id="inputEdgeLength"></p>
+                    <p>gravity : <input type="checkbox" id="checkboxGravity"></p>
+                </fieldset>
+            </form>
+        </div>
+
+        <div class="pure-u-1-3">
+            <form class="pure-form">
+                <fieldset>
+                    <legend>Adjacency List</legend>
+                    <textarea id="inputAdjList" cols="10" rows="10"></textarea>
+                </fieldset>
+            </form>
+        </div>
+        <div class="pure-u-1-3">
+            <form class="pure-form">
+                <fieldset>
+                    <legend>説明</legend>
+                    <p>
+                        <ul>
+                            <li>右クリック: 固定</li>
+                            <li>D&D: 移動</li>
+                        </ul>
+                    </p>
+                </fieldset>
+            </form>
+        </div>
     </div>
     <hr>
-    <div id="wrapper">
-        <canvas id="canvas"></canvas>
-    </div>
+
+    <center>
+        <div id="wrapper">
+            <canvas id="canvas"></canvas>
+        </div>
+    </center>
+
     <script src="graph-vis.js"></script>
 </body>
 
