--- a/ts/index.html
+++ b/ts/index.html
@@ -25,12 +25,12 @@
             background-color: rgb(250, 250, 250);
         }
         center {
-            height: 100%;
+            height: calc(100% - 350px);
             width: 100%;
         }
         #wrapper {
-            height: 80%;
-            width: 80%;
+            height: 90%;
+            width: 90%;
             padding: 0px;
         }
     </style>
