--- a/ts/index.html
+++ b/ts/index.html
@@ -25,7 +25,7 @@
             background-color: rgb(250, 250, 250);
         }
         center {
-            height: calc(100% - 350px);
+            height: 100%;
             width: 100%;
         }
         #wrapper {
@@ -42,10 +42,6 @@
             <form class="pure-form">
                 <fieldset>
                     <legend>Settings</legend>
-                    <p>
-                        <input type="radio" id="radioZeroIndexed" name="indexing">0-indexed
-                        <input type="radio" id="radioOneIndexed" name="indexing">1-indexed
-                    </p>
                     <p>
                         <input type="radio" id="radioUndirected" value="undirected" name="direction">undirected
                         <input type="radio" id="radioDirected" value="directed" name="direction">directed
