ファイルを分割、リファクタリング

--- a/ts/index.html
+++ b/ts/index.html
@@ -83,7 +83,7 @@
         </div>
     </center>
 
-    <script src="graph-vis.js"></script>
+    <script src="./out/graph-vis.js"></script>
 </body>
 
 </html>
